refactor: reformat codes